--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .aider*
-data/*
 src/__pycache__/*
+
+#Ignore all the data inside the data file
+data/*
+
+#Ignore virtual environment file
+project6242/
