--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,8 +1,7 @@
 data:
   trump_path: 'data/hashtag_donaldtrump.csv'
   biden_path: 'data/hashtag_joebiden.csv'
-  output_path: 'data/tweets_with_dup.csv'
-  output_path_no_dups: 'data/tweets_no_dups.csv'
+  output_path: 'data/english_tweets.csv'
 
 filter:
   country: 
