--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -73,4 +73,6 @@ vectorizer:
 
 streamlit:
   port: 8501
+  data: 'data/results/sample_data.csv'
+  geojson_url: 'https://raw.githubusercontent.com/PublicaMundi/MappingAPI/master/data/geojson/us-states.json'
   
