--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -69,3 +69,37 @@ vectorizer:
     type: "tfidf" 
     max_features: 1000 #Maximum features
     max_df: 0.5
+
+columns_to_keep:
+  - name: "created_date"
+    dtype: "datetime"
+  - name: "created_time"
+    dtype: "object"
+  - name: "tweet_id"
+    dtype: "float"
+  - name: "tweet"
+    dtype: "string"
+  - name: "likes"
+    dtype: "int"
+  - name: "retweet_count"
+    dtype: "int"
+  - name: "source"
+    dtype: "string"
+  - name: "user_id"
+    dtype: "float"
+  - name: "user_id_post_count"
+    dtype: "int"
+  - name: "user_description"
+    dtype: "string"
+  - name: "days_from_join_date"
+    dtype: "int"
+  - name: "user_followers_count"
+    dtype: "int"
+  - name: "state"
+    dtype: "string"
+  - name: "hashtag"
+    dtype: "string"
+  - name: "clean_tweet"
+    dtype: "string"
+  - name: "no_stopwords"
+    dtype: "list"
