--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,72 @@
-# Hugging Face Transformers for distil-bert model
+# Core ML & Data Science
 transformers>=4.0.0
-datasets>=2.0.0  # For loading and preprocessing tweet data
-
-# Tokenization and NLP processing
-sentencepiece>=0.1.0
-nltk>=3.5  # For additional text processing like slang handling
-
-# PyTorch for model training
+datasets>=2.0.0
 torch>=2.0.0
-torchvision>=0.15.0  # Optional, in case you handle any tweet images
+torchvision>=0.15.0
+scikit-learn>=0.24.0
+xgboost
+numpy>=1.21.0
+pandas>=1.3.0
+scipy>=1.13.1
 
-# Graphviz for visualizing graphs and workflows
-graphviz>=0.16.0
-
-# Streamlit for real-time dashboard and visualization
-streamlit>=1.0.0
-
-# FastAPI for batch inference serving
-fastapi>=0.70.0
-uvicorn>=0.16.0  # To serve the FastAPI app
-
-# Plotly Dash for interactive visualizations
-dash>=2.0.0
-plotly>=5.0.0  # Plotly core for graphs
-
-# Additional tools for data handling
-pandas>=1.3.0  # For handling structured data
-numpy>=1.21.0  # For numerical operations
-scikit-learn>=0.24.0  # For evaluation metrics (e.g., accuracy, F1)
-
-# Web scraping and tweet collection (if necessary)
-tweepy>=4.0.0  # For collecting tweets from Twitter API
-
-# Emojis and image processing (for emoji analysis in tweets)
-emoji>=2.0.0
-Pillow>=8.0.0  # For image-related processing
-
-# Visualization libraries
-matplotlib>=3.4.0  # For standard visualizations
-seaborn>=0.11.0  # Optional, for advanced visualizations
-
-# To manage .env files (optional for API keys and configurations)
-python-dotenv>=0.18.0
-
-# For testing purposes
-pytest>=6.2.0  # For unit testing of code
-
-# OpenAI (Deepseek) 
-openai
-
-langdetect>=1.0.0
-PyYAML>=5.4.1
-
-prompt-toolkit
-ipykernel
-
-#LDA Model
-tmtoolkit >= 0.12.0
-gensim >= 4.3.3
-scipy >=1.13.1
-pyldavis >= 3.4.1
-
-# wordcloud
+# NLP & Text Processing
+sentencepiece>=0.1.0
+nltk>=3.5
+gensim>=4.3.3
+tmtoolkit>=0.12.0
 wordcloud
+langdetect>=1.0.0
+emoji>=2.0.0
 
-gensim
-
-plotly
-
-geopandas
-pyLDAvis
-
-jupyter_bokeh
+# Visualization
+matplotlib>=3.4.0
+seaborn>=0.11.0
+plotly>=5.0.0
+altair
+bokeh
+graphviz>=0.16.0
+pyLDAvis>=3.4.1
+holoviews
 hvplot
+pydeck
+jupyter_bokeh
 umap
+
+# Web Frameworks & APIs
+streamlit>=1.0.0
+streamlit_tags
+fastapi>=0.70.0
+uvicorn>=0.16.0
+dash>=2.0.0
+flask
+
+# Cloud & Storage
+boto3
+
+# Image Processing
+opencv-python
+pillow>=8.0.0
+scikit-image
+
+# Geospatial
+geopandas
+pyproj
+shapely
+folium
+
+# API Clients & Utils
+tweepy>=4.0.0
+openai
+huggingface-hub
+langchain
 langchain_openai
 
-streamlit_tags
+# Development Tools
+pytest>=6.2.0
+python-dotenv>=0.18.0
+PyYAML>=5.4.1
+sqlalchemy
+jupyter
+prompt-toolkit
+ipykernel
+panel
