--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,18 @@
-# Core ML & Data Science
-transformers>=4.0.0
-datasets>=2.0.0
-torch>=2.0.0
-torchvision>=0.15.0
-scikit-learn>=0.24.0
-numpy>=1.21.0
+# Core Data Science
 pandas>=1.3.0
-scipy>=1.13.1
+numpy>=1.21.0
 
 # NLP & Text Processing
-sentencepiece>=0.1.0
-nltk>=3.5
-gensim>=4.3.3
-tmtoolkit>=0.12.0
 wordcloud
-langdetect>=1.0.0
 emoji>=2.0.0
 
 # Visualization
-matplotlib>=3.4.0
-seaborn>=0.11.0
 plotly>=5.0.0
-bokeh
-graphviz>=0.16.0
-pyLDAvis>=3.4.1
-pydeck
-jupyter_bokeh
-umap
 
-# Web Frameworks & APIs
+# Web Framework
 streamlit>=1.0.0
 streamlit_tags
-uvicorn>=0.16.0
-dash>=2.0.0
-flask
 
-
-# Geospatial
-geopandas
-
-# API Clients & Utils
-tweepy>=4.0.0
-openai
-huggingface-hub
-langchain
-langchain_openai
-
-# Development Tools
-pytest>=6.2.0
+# API & Utils
 python-dotenv>=0.18.0
 PyYAML>=5.4.1
-sqlalchemy
-prompt-toolkit
-ipykernel
-
-#LDA Model
-tmtoolkit >= 0.12.0
-gensim >= 4.3.3
-scipy >= 1.13.1
-pyldavis >= 3.4.1
-
-#RoBERTa Model and Hugging Face
-transformers >= 4.46.2
-huggingface_hub >= 0.26.2
-sentencepiece >= 0.2.0
