--- a/docker/DockerFile
+++ b/docker/DockerFile
@@ -2,6 +2,7 @@
 # docker build : docker build -f docker/DockerFile . -t streamlit-app:latest
 # docker ps to get the container id
 # docker tag <image> registry.heroku.com/<app>/<process-type>
+# sudo docker tag streamlit-app:latest registry.heroku.com/us-election-analytics-2020/web
 
 # <app> : us-election-analytics-2020
 # <process-type> : web
@@ -60,7 +61,9 @@ WORKDIR /app
 RUN useradd -m streamlit
 USER streamlit
 
-# # Command to run the application
-# ENTRYPOINT ["streamlit", "run", "app/streamlit_app.py", "--server.port=$PORT", "--server.address=0.0.0.0"]
+EXPOSE $PORT
 
-CMD ["streamlit", "run", "app/streamlit_app.py", "--server.port=$PORT"]
+# Command to run the application
+CMD streamlit run app/streamlit_app.py --server.port=$PORT
+
+
