--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy>=1.21.0
 pandas>=1.3.0
 
 # NLP & Text Processing
-wordcloud
+wordcloud==1.9.3
 langdetect>=1.0.0
 emoji>=2.0.0
 
@@ -14,23 +14,24 @@ plotly>=5.0.0
 
 # Web Frameworks & APIs
 streamlit>=1.0.0
-streamlit_tags
+streamlit_tags==1.2.8
 
 # Geospatial
-geopandas
+geopandas==1.0.1
 
 # API Clients & Utils
 openai==1.52.2
 langchain==0.3.4
 langchain_openai==0.2.3
 langchain-community==0.3.3
+httpx==0.27.2
 
 # Development Tools
 pytest>=6.2.0
 python-dotenv>=0.18.0
 PyYAML>=5.4.1
-prompt-toolkit
-ipykernel
-nltk >= 3.9.1
+prompt-toolkit==3.0.43
+ipykernel==6.29.5
+nltk>=3.9.1
 pydantic==2.9.2
 gdown==5.2.0
